Fixed bugs such as subtitles not being aligned

--- a/css/shoulders.css
+++ b/css/shoulders.css
@@ -2,6 +2,7 @@
 .travel {
   display: flex;
   justify-content: center;
+  align-items: center;
   font-weight: bolder;
   color: black;
   font-size: 36px;
